k8s/overlays/local/postgresql/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql-local
  labels:
    istio-injection: enabled
