k8s/overlays/local/postgresql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql-local
  labels:
    environment: local
    service: postgresql
    project: solidity-security
