k8s/overlays/local/postgresql/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: ClusterIP
